--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3'
 
 
 services:
@@ -9,6 +9,8 @@ services:
       - 3000:3000
     volumes:
       - ./frontend:/app
+    networks:
+      - internal
   
   backend:
     container_name: backend
@@ -16,7 +18,9 @@ services:
     ports:
       - 4000:3000
     volumes:
-      - ./frontend:/app
+      - ./backend:/app
+    networks:
+      - internal
   
   nginx:
     container_name: nginx
@@ -31,7 +35,36 @@ services:
       - ./nginx/ssl:/usr/share/nginx/ssl
     networks:
       - internal
+    depends_on:
+      - php-fpm
+  
+  php-fpm:
+    container_name: php-fpm
+    build:
+      context: ./php-fpm
+      dockerfile: Dockerfile
+    volumes:
+      - ./nginx/phpmyadmin:/var/www/html
+    networks:
+      - internal
+
+  mysql:
+    container_name: mysql
+    image: mysql
+    environment:
+      command: --default-authentication-plugin=mysql_native_password
+      restart: always
+      MYSQL_ROOT_PASSWORD: password
+    networks:
+      - internal
+    volumes:
+      - db-datavolume:/var/lib/mysql
+    ports:
+      - 3306:3306
 
 networks:
   internal:
     driver: bridge
+
+volumes:
+  db-datavolume:
