--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "material-ui-popup-state": "^5.0.10",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
